# racun-ocr

./: .env  README.md  alembic.ini  analysis_summary.json  contour_debugging.py  detail_debugger.py  fixed_contour_detection.py  new verson  preview.sql  print_tables.py  pyproject.toml  requirements.txt  results_analyzer.py  schema.sql  test_conn.py  test_db_connection.py  test_results.json  tester.py  working and clean txt
alembic/: env.py
alembic/versions/: 3759b1366241_initial_schema.py  8900bcac251d_initial_migration.py  89d7475a4192_initial_schema.py  bb33e7ca7f49_initial_schema.py
app/: alembic.ini  config.py  main.py  setup_structure.py
app/alembic/: env.py
app/api/: endpoints.py
app/db/: __init__.py  config.py  crud.py  models.py  receipt_db_writer.py  schemas.py  session.py
app/ocr/: image_loader.py  main_ocr.py  ocr_service.py  old_working_processor.py  parser.py  processor.py  receipt_service.py
app/ocr/engine/: __init__.py  main_ocr.py  ocr_engine.py  scoring.py
app/ocr/processor/: contour.py  core.py  cropper.py  debug.py
archive/: endpoints-before-claude  new test for the vertical read  parser-before-claude  processor-before-claude  txt  working txt and lines
debug_images/: best_ocr_result.txt
